--- a/package.json
+++ b/package.json
@@ -12,20 +12,36 @@
     "install:users": "cd users && npm i",
     "install:favourites": "cd favourites && npm i",
     "install:albums": "cd albums && npm i",
+    "build:all": "run-s build:artists build:genres build:bands build:tracks build:tracks build:users build:favourites build:albums",
+    "build:artists": "cd artists && npm run build",
+    "build:genres": "cd genres && npm run build",
+    "build:bands": "cd bands && npm run build",
+    "build:tracks": "cd tracks && npm run build",
+    "build:users": "cd users && npm run build",
+    "build:favourites": "cd favourites && npm run build",
+    "build:albums": "cd albums && npm run build",
+    "prod:all": "npm run kill && run-p prod:artists prod:genres prod:bands prod:tracks prod:users prod:favourites prod:albums",
+    "prod:artists": "cd artists && npm run start:prod",
+    "prod:genres": "cd genres && npm run start:prod",
+    "prod:bands": "cd bands && npm run start:prod",
+    "prod:tracks": "cd tracks && npm run start:prod",
+    "prod:users": "cd users && npm run start:prod",
+    "prod:favourites": "cd favourites && npm run start:prod",
+    "prod:albums": "cd albums && npm run start:prod",
+    "run:all": "npm run kill && run-p run:artists run:genres run:bands run:tracks run:users run:favourites run:albums",
     "run:artists": "cd artists && npm run start:dev",
     "run:genres": "cd genres && npm run start:dev",
     "run:bands": "cd bands && npm run start:dev",
     "run:tracks": "cd tracks && npm run start:dev",
     "run:users": "cd users && npm run start:dev",
     "run:favourites": "cd favourites && npm run start:dev",
-    "run:albums": "cd albums && npm run start:dev",
-    "run:all": "npm run kill && run-p run:artists run:genres run:bands run:tracks run:users run:favourites run:albums",
+    "run:albums": "cd albums && npm run start:dev",   
     "kill": "kill-port --port 3001,3002,3003,3004,3005,3006,3007"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5"  
   },
   "dependencies": {
     "kill-port": "^2.0.1"
