--- a/tracks/.env
+++ b/tracks/.env
@@ -1,3 +1,3 @@
 VERIFY_TOKEN_URL=http://localhost:3004/v1/users/verify
 PORT=3006
-MONGO_URL=mongodb://mongoadmin:secret@localhost:27888/?authSource=admin.
+MONGO_URL=mongodb+srv://du-dim:musicify123@cluster0.bhbwr.mongodb.net
