--- a/favourites/.env
+++ b/favourites/.env
@@ -1,3 +1,4 @@
 VERIFY_TOKEN_URL=http://localhost:3004/v1/users/verify
 PORT=3007
-MONGO_URL=mongodb+srv://du-dim:musicify123@cluster0.bhbwr.mongodb.net
+MONGO_URL2=mongodb+srv://du-dim:musicify123@cluster0.bhbwr.mongodb.net
+MONGO_URL=mongodb://localhost:27017
